--- a/packages/base/blockquote-base-embedded-webview/src/styles/BlockquoteBaseEmbeddedWebviewResize.scss
+++ b/packages/base/blockquote-base-embedded-webview/src/styles/BlockquoteBaseEmbeddedWebviewResize.scss
@@ -9,8 +9,10 @@
   --_rect-max-height: var(--blockquote-base-embedded-webview-resize-rect-max-height, 100%);
   --_rect-width: var(--blockquote-base-embedded-webview-resize-rect-width, 40rem);
   --_rect-height: var(--blockquote-base-embedded-webview-resize-rect-height, 22.5rem);
-  --_resizer-bgcolor: var(--blockquote-base-embedded-webview-resize-resizer-bgcolor, rgb(222, 225, 230));
-  --_resizer-bgcolor-hover: var(--blockquote-base-embedded-webview-resize-resizer-bgcolor-hover, rgb(218, 220, 224));
+  --_resizer-bgcolor: var(--blockquote-base-embedded-webview-resize-resizer-bgcolor, rgb(234, 234, 234));
+  --_resizer-bgcolor-hover: var(--blockquote-base-embedded-webview-resize-resizer-bgcolor-hover, rgb(220, 220, 220));
+  --_resizer-bgimage-ew-hover: var(--blockquote-base-embedded-webview-resize-resizer-bgcolor-hover, linear-gradient(0deg, rgba(220, 220, 220, 0.2), rgba(220, 220, 220, 1) 50%, rgba(220, 220, 220, 0.2)));
+  --_resizer-bgimage-s-hover: var(--blockquote-base-embedded-webview-resize-resizer-bgcolor-hover, linear-gradient(90deg, rgba(220, 220, 220, 0.2), rgba(220, 220, 220, 1) 50%, rgba(220, 220, 220, 0.2)));
 
   display: flex;
   flex-direction: column;
@@ -60,10 +62,6 @@
     transform: translateX(-50%);
   }
 
-  &:hover:not(&-n) {
-    background-color: var(--_resizer-bgcolor-hover); // --color-background-highlight: rgb(218, 220, 224);
-  }
-
   &-n {
     height: calc(var(--__resizer-factor) / 4);
     top: calc(var(--__resizer-factor) / 4 * -1);
@@ -75,20 +73,13 @@
     }
   }
 
-  &-se,
-  &-sw {
-    height: var(--__resizer-factor);
-    width: var(--__resizer-factor);
+  &-se {
+    cursor: nwse-resize;
 
     &::after {
       // resizeDiagonal
-      content: url("data:image/svg+xml,%0A%3Csvg width='13' height='13' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cg clip-path='url(%23clip0)' fill='%23848282'%3E%3Crect x='-.195' y='10.775' width='15.566' height='2' rx='1' transform='rotate(-45 -.195 10.775)'/%3E%3Crect x='5.346' y='11.241' width='8.401' height='2' rx='1' transform='rotate(-45 5.346 11.24)'/%3E%3C/g%3E%3Cdefs%3E%3CclipPath id='clip0'%3E%3Cpath fill='%23fff' d='M0 0h13v13H0z'/%3E%3C/clipPath%3E%3C/defs%3E%3C/svg%3E");
       transform: translate(-50%, -50%);
     }
-  }
-
-  &-se {
-    cursor: nwse-resize;
   }
 
   &-sw {
@@ -96,25 +87,8 @@
 
     &::after {
       // resizeDiagonal
-      transform: translate(-50%, -50%) translateY(-1.5px) rotate(90deg);
+      transform: translate(-50%, -50%) translateY(-0.0938rem) rotate(90deg);
     }
-  }
-
-  &-s {
-    cursor: ns-resize;
-    height: var(--__resizer-factor);
-
-    &::after {
-      // resizeHorizontal
-      content: url("data:image/svg+xml,%0A%3Csvg width='26' height='6' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Crect width='26' height='2' rx='1' fill='%23848282'/%3E%3Crect y='4' width='26' height='2' rx='1' fill='%23848282'/%3E%3C/svg%3E");
-      transform: translate(-50%, -50%) translateY(-3px);
-    }
-  }
-
-  &-e,
-  &-w {
-    cursor: ew-resize;
-    width: var(--__resizer-factor);
   }
 
   &-se,
@@ -131,6 +105,47 @@
   &-w,
   &-sw {
     left: calc(var(--__resizer-factor) * -1);
+  }
+
+  &-se,
+  &-sw {
+    height: var(--__resizer-factor);
+    width: var(--__resizer-factor);
+
+    &::after {
+      // resizeDiagonal
+      content: url("data:image/svg+xml,%0A%3Csvg width='13' height='13' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cg clip-path='url(%23clip0)' fill='%23848282'%3E%3Crect x='-.195' y='10.775' width='15.566' height='2' rx='1' transform='rotate(-45 -.195 10.775)'/%3E%3Crect x='5.346' y='11.241' width='8.401' height='2' rx='1' transform='rotate(-45 5.346 11.24)'/%3E%3C/g%3E%3Cdefs%3E%3CclipPath id='clip0'%3E%3Cpath fill='%23fff' d='M0 0h13v13H0z'/%3E%3C/clipPath%3E%3C/defs%3E%3C/svg%3E");
+    }
+
+    &:hover {
+      background-color: var(--_resizer-bgcolor-hover); // --color-background-highlight: rgb(218, 220, 224);
+    }
+  }
+
+  &-s {
+    cursor: ns-resize;
+    height: var(--__resizer-factor);
+
+    &::after {
+      // resizeHorizontal
+      content: url("data:image/svg+xml,%0A%3Csvg width='26' height='6' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Crect width='26' height='2' rx='1' fill='%23848282'/%3E%3Crect y='4' width='26' height='2' rx='1' fill='%23848282'/%3E%3C/svg%3E");
+      transform: translate(-50%, -50%) translateY(-0.1875rem);
+    }
+
+    &:hover {
+      background-image: var(--_resizer-bgimage-s-hover); // --color-background-highlight: rgb(218, 220, 224);
+    }
+  }
+
+  &-e,
+  &-w {
+    cursor: ew-resize;
+    width: var(--__resizer-factor);
+
+    &:hover {
+      background-image: var(--_resizer-bgimage-ew-hover); // --color-background-highlight: rgb(218, 220, 224);
+      background-position: bottom;
+    }
   }
 }
 
