fix(blockquote-base-embedded-webview): no-option

--- a/packages/base/blockquote-base-embedded-webview/src/styles/BlockquoteBaseEmbeddedWebview.scss
+++ b/packages/base/blockquote-base-embedded-webview/src/styles/BlockquoteBaseEmbeddedWebview.scss
@@ -54,7 +54,6 @@ header > div {
   display: inline-grid;
   grid-template-areas: select;
   align-items: center;
-  margin-bottom: 0.5rem;
 
   & > * {
     grid-area: select;
@@ -94,8 +93,12 @@ header > div {
 }
 
 .description {
-  margin: 0 0 1rem;
+  margin: 0.5rem 0 1rem;
   font-size: 0.875rem;
+}
+
+.description:empty {
+  visibility: hidden;
 }
 
 .read-data-pos {
