--- a/packages/base/blockquote-base-embedded-webview/src/styles/BlockquoteBaseEmbeddedWebview.scss
+++ b/packages/base/blockquote-base-embedded-webview/src/styles/BlockquoteBaseEmbeddedWebview.scss
@@ -22,6 +22,7 @@
 }
 
 .main {
+  transform: translateZ(0);
   flex: 1;
   background-color: var(--_main-bgcolor);
 }
@@ -104,7 +105,8 @@ header > div {
 .read-data-pos {
   font-size: 0.875rem;
   letter-spacing: 0.0156rem;
-  position: absolute;
+  position: fixed;
+  z-index: 1;
   right: 0.375rem;
   top: 0.3125rem;
   opacity: 0;
