--- a/packages/base/blockquote-base-embedded-webview/src/styles/BlockquoteBaseEmbeddedWebviewResize.scss
+++ b/packages/base/blockquote-base-embedded-webview/src/styles/BlockquoteBaseEmbeddedWebviewResize.scss
@@ -2,7 +2,8 @@
 
 :host {
   --__resizer-factor: calc(1.25rem * var(--blockquote-base-embedded-webview-resize-factor, 1));
-  --_rect-transition: var(--blockquote-base-embedded-webview-resize-rect-transition, width 90ms cubic-bezier(0.25, 0.46, 0.45, 0.94), height 90ms cubic-bezier(0.25, 0.46, 0.45, 0.94));
+
+  // --_rect-transition: var(--blockquote-base-embedded-webview-resize-rect-transition, width 16ms cubic-bezier(0.25, 0.46, 0.45, 0.94), height 16ms cubic-bezier(0.25, 0.46, 0.45, 0.94));
   --_rect-min-width: var(--blockquote-base-embedded-webview-resize-rect-min-width, 18.75rem);
   --_rect-min-height: var(--blockquote-base-embedded-webview-resize-rect-min-height, 9.375rem);
   --_rect-max-width: var(--blockquote-base-embedded-webview-resize-rect-max-width, 100%);
@@ -42,7 +43,8 @@
   width: var(--_rect-width);
   height: var(--_rect-height);
   transform: translateZ(0);
-  transition: var(--_rect-transition);
+
+  // transition: var(--_rect-transition);
 }
 
 .resizer {
@@ -67,6 +69,8 @@
     top: calc(var(--__resizer-factor) / 4 * -1);
     left: calc(var(--__resizer-factor) * -1);
     width: calc(100% + var(--__resizer-factor) * 2);
+    border-top-left-radius: calc(var(--__resizer-factor) / 10);
+    border-top-right-radius: calc(var(--__resizer-factor) / 10);
 
     &::after {
       content: none;
@@ -75,6 +79,7 @@
 
   &-se {
     cursor: nwse-resize;
+    border-bottom-right-radius: calc(var(--__resizer-factor) / 10);
 
     &::after {
       // resizeDiagonal
@@ -84,6 +89,7 @@
 
   &-sw {
     cursor: nesw-resize;
+    border-bottom-left-radius: calc(var(--__resizer-factor) / 10);
 
     &::after {
       // resizeDiagonal
