--- a/packages/base/blockquote-base-embedded-webview/src/styles/BlockquoteBaseEmbeddedWebviewSize.scss
+++ b/packages/base/blockquote-base-embedded-webview/src/styles/BlockquoteBaseEmbeddedWebviewSize.scss
@@ -20,22 +20,6 @@
   display: none !important;
 }
 
-:host([data-resizing]) [aria-hidden="true"] {
-  opacity: 0.4;
-}
-
-:host([data-resizing]) [aria-hidden="true"]::after {
-  content: "";
-  display: block;
-  height: 1px;
-  width: calc(100% + 2rem);
-  position: absolute;
-  left: 50%;
-  top: 50%;
-  transform: translate(-50%, -50%);
-  background-image: linear-gradient(90deg, rgba(0, 0, 0, 0), rgba(0, 0, 0, 1), rgba(0, 0, 0, 0));
-}
-
 *,
 *::before,
 *::after {
@@ -80,6 +64,22 @@ button {
     cursor: pointer;
     letter-spacing: inherit;
     position: absolute;
+  }
+
+  & [aria-disabled="true"] {
+    opacity: 0.4;
+
+    &::after {
+      content: "";
+      display: block;
+      height: 1px;
+      width: calc(100% + 2rem);
+      position: absolute;
+      left: 50%;
+      top: 50%;
+      transform: translate(-50%, -50%);
+      background-image: linear-gradient(90deg, rgba(0, 0, 0, 0), rgba(0, 0, 0, 1), rgba(0, 0, 0, 0));
+    }
   }
 }
 
