fix(blockquote-base-embedded-webview): add contain-content

--- a/packages/base/blockquote-base-embedded-webview/src/styles/BlockquoteBaseEmbeddedWebviewResize.scss
+++ b/packages/base/blockquote-base-embedded-webview/src/styles/BlockquoteBaseEmbeddedWebviewResize.scss
@@ -15,6 +15,7 @@
   --_resizer-bgimage-ew-hover: var(--blockquote-base-embedded-webview-resize-resizer-bgcolor-hover, linear-gradient(0deg, rgba(220, 220, 220, 0.2), rgba(220, 220, 220, 1) 50%, rgba(220, 220, 220, 0.2)));
   --_resizer-bgimage-s-hover: var(--blockquote-base-embedded-webview-resize-resizer-bgcolor-hover, linear-gradient(90deg, rgba(220, 220, 220, 0.2), rgba(220, 220, 220, 1) 50%, rgba(220, 220, 220, 0.2)));
 
+  contain: content;
   display: flex;
   flex-direction: column;
   align-items: center;
