--- a/packages/foundations/blockquote-foundations-sass/_mixins.scss
+++ b/packages/foundations/blockquote-foundations-sass/_mixins.scss
@@ -1,10 +1,14 @@
+@use "sass:math";
+
+$base-font-size: 16px;
+
 // *---------------
 // Convert pixels to ems
 // eg. for a relational value of 12px write em(12px) when the parent is 16px
 // if the parent is another value say 24px write em(12px, 24px)
 // ----------------*/
 @function em($pixels, $context: 16) {
-  @return calc($pixels / $context) * 1em;
+  @return math.div($pixels, $context) * 1em;
 }
 
 // *---------------
@@ -13,7 +17,7 @@
 // Assumes $base-font-size is the font-size of <html>
 // ----------------*/
 @function rem($font-size) {
-  @return ($font-size / $base-font-size) * 1rem;
+  @return math.div($font-size, $base-font-size) * 1rem;
 }
 
 // *---------------
