--- a/packages/base/blockquote-base-embedded-webview/src/styles/BlockquoteBaseEmbeddedWebviewElement.scss
+++ b/packages/base/blockquote-base-embedded-webview/src/styles/BlockquoteBaseEmbeddedWebviewElement.scss
@@ -1,4 +1,4 @@
-@import "node_modules/@blockquote-web-components/blockquote-foundations-sass/main";
+@use "../../../../../node_modules/@blockquote-web-components/blockquote-foundations-sass/main";
 
 :host,
 ::slotted([slot="embedded"]) {
