--- a/packages/components/blockquote-tabs/demo/index.html
+++ b/packages/components/blockquote-tabs/demo/index.html
@@ -4,6 +4,7 @@
     <title>Demo - blockquote-tabs</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta charset="utf-8" />
+    <meta name="description" content="All Demos - blockquote-tabs" />
     <meta name="description" content="blockquote-tabs" />
     <style>
       html,
