--- a/packages/components/blockquote-tabs/src/styles/blockquote-tabs.scss
+++ b/packages/components/blockquote-tabs/src/styles/blockquote-tabs.scss
@@ -62,8 +62,7 @@
 
 .scroll-content {
   width: 100%;
-  overflow-x: auto;
-  overflow-y: hidden;
+  overflow: auto hidden;
   -webkit-overflow-scrolling: touch;
   scrollbar-width: none;
   overscroll-behavior: none;
