--- a/packages/components/blockquote-tabs/demo/autofocus.html
+++ b/packages/components/blockquote-tabs/demo/autofocus.html
@@ -1,7 +1,8 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
+    <meta charset="utf-8" />
+    <link rel="icon" href="favicon.svg" sizes="any" type="image/svg+xml" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Demo Autofocus - blockquote-tabs" />
     <title>Autofocus - blockquote-tabs</title>
