chore(blockquote-dialog): update favicon

--- a/packages/components/blockquote-dialog/demo/base.html
+++ b/packages/components/blockquote-dialog/demo/base.html
@@ -1,7 +1,8 @@
 <!doctype html>
 <html lang="en" dark="_mode">
   <head>
-    <meta charset="UTF-8" />
+    <meta charset="utf-8" />
+    <link rel="icon" href="favicon.svg" sizes="any" type="image/svg+xml" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Demo Base - blockquote-dialog" />
     <title>Base - blockquote-dialog</title>
@@ -43,7 +44,7 @@
       <button id="open-dialog">Open dialog</button>
 
       <wrapper-dialog>
-        <blockquote-dialog>
+        <blockquote-dialog label="All fields are required">
           <form method="dialog">
             <div>
               <button aria-label="close" formnovalidate>X</button>
