--- a/packages/components/blockquote-dialog/index.html
+++ b/packages/components/blockquote-dialog/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
+    <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Redirect blockquote-dialog url=/demo/index.html"</title>
     <meta http-equiv="refresh" content="0; url=/demo/index.html" />
