--- a/packages/components/blockquote-dialog/demo/index.html
+++ b/packages/components/blockquote-dialog/demo/index.html
@@ -4,6 +4,7 @@
     <title>Demo - blockquote-dialog</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta charset="utf-8" />
+    <link rel="icon" href="favicon.svg" sizes="any" type="image/svg+xml" />
     <meta name="description" content="All Demos - blockquote-dialog" />
     <style>
       html,
@@ -17,7 +18,6 @@
   <body>
     <blockquote-base-embedded-webview heading="blockquote-dialog" screen-size-selected="6">
       <template data-src="./base.html" data-option="Base"></template>
-      <template data-src="./label.html" data-option="Label"></template>
       <template data-src="./labelledby.html" data-option="Labelledby"></template>
     </blockquote-base-embedded-webview>
     <script type="module">
