--- a/packages/foundations/blockquote-foundations-sass/_mixins.scss
+++ b/packages/foundations/blockquote-foundations-sass/_mixins.scss
@@ -43,10 +43,7 @@ $base-font-size: 16px;
 // element { @include inset; }
 // ----------------*/
 @mixin inset {
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
+  inset: 0;
 }
 
 // *---------------
