chore: from wtr to vitest

--- a/packages/components/blockquote-dialog/demo/base.html
+++ b/packages/components/blockquote-dialog/demo/base.html
@@ -42,7 +42,6 @@
     <main>
       <h1 class="sr-only">blockquote-dialog</h1>
       <button id="open-dialog">Open dialog</button>
-
       <wrapper-dialog>
         <blockquote-dialog label="All fields are required">
           <form method="dialog">
@@ -81,7 +80,7 @@
         </blockquote-dialog>
       </wrapper-dialog>
     </main>
-    <script type="module" src="../src/define/blockquote-dialog.js"></script>
+    <script type="module" src="./entry.js"></script>
     <script>
       class WrapperDialog extends HTMLElement {
         constructor() {
