--- a/packages/components/blockquote-dialog/demo/labelledby.html
+++ b/packages/components/blockquote-dialog/demo/labelledby.html
@@ -79,11 +79,11 @@
               <button formmethod="get">Submit</button>
             </p>
           </form>
-          <span slot="idref_">MLW Registration - All fields are required</span>
+          <span slot="idref_">All fields are required</span>
         </blockquote-dialog>
       </wrapper-dialog>
     </main>
-    <script type="module" src="../src/define/blockquote-dialog.js"></script>
+    <script type="module" src="./entry.js"></script>
     <script>
       class WrapperDialog extends HTMLElement {
         constructor() {
