--- a/packages/components/blockquote-tabs/demo/base.html
+++ b/packages/components/blockquote-tabs/demo/base.html
@@ -78,7 +78,7 @@
         </blockquote-tabpanel>
       </blockquote-tabs>
     </main>
-    <script type="module" src="../src/define/blockquote-tabs.js"></script>
+    <script type="module" src="./entry.js"></script>
     <script>
       document.addEventListener('selectedchange', ({detail}) => console.log(detail));
     </script>
