--- a/packages/components/blockquote-tabs/demo/index.html
+++ b/packages/components/blockquote-tabs/demo/index.html
@@ -20,9 +20,6 @@
       <template data-src="./base.html" data-option="Base"></template>
       <template data-src="./autofocus.html" data-option="Autofocus"></template>
     </blockquote-base-embedded-webview>
-    <script type="module">
-      // eslint-disable-next-line import/no-extraneous-dependencies
-      import '@blockquote-web-components/blockquote-base-embedded-webview/blockquote-base-embedded-webview.js';
-    </script>
+    <script type="module" src="./entry.js"></script>
   </body>
 </html>
