--- a/packages/components/blockquote-tabs/src/styles/blockquote-tabs.scss
+++ b/packages/components/blockquote-tabs/src/styles/blockquote-tabs.scss
@@ -1,7 +1,13 @@
 :host {
   --_unselected-color: var(--blockquote-tabs-unselected-color, rgb(234 234 234));
-  --_scroll-gradient-start-color: var(--blockquote-tabs-scroll-gradient-start-color, rgba(255, 255, 255, 0));
-  --_scroll-gradient-end-color: var(--blockquote-tabs-scroll-gradient-end-color, rgba(252, 252, 252, 1));
+  --_scroll-gradient-start-color: var(
+    --blockquote-tabs-scroll-gradient-start-color,
+    rgba(255, 255, 255, 0)
+  );
+  --_scroll-gradient-end-color: var(
+    --blockquote-tabs-scroll-gradient-end-color,
+    rgba(252, 252, 252, 1)
+  );
   --_scroll-arrow-color: var(--blockquote-tabs-scroll-arrow-color, rgb(94, 94, 94));
 
   contain: content;
@@ -42,7 +48,9 @@
     top: 0;
     bottom: 1px;
     left: 0;
-    box-shadow: rgb(255 255 255) 4px 0 12px 4px inset, rgba(210, 210, 210, 1) 4px 0 4px -4px;
+    box-shadow:
+      rgb(255 255 255) 4px 0 12px 4px inset,
+      rgba(210, 210, 210, 1) 4px 0 4px -4px;
     background-color: rgba(234, 234, 234, 0.5);
     transition: opacity 92ms ease-in-out;
     opacity: 0;
