--- a/packages/base/blockquote-base-embedded-webview/src/styles/blockquote-base-embedded-webview-size.scss
+++ b/packages/base/blockquote-base-embedded-webview/src/styles/blockquote-base-embedded-webview-size.scss
@@ -2,10 +2,22 @@
   --_host-color: var(--blockquote-base-embedded-webview-size-color, inherit);
   --_rect-height: var(--blockquote-base-embedded-webview-size-rect-height, 1.125rem);
   --_rect-size: var(--blockquote-base-embedded-webview-size-rect-size, 0.6875rem);
-  --_button-border-color: var(--blockquote-base-embedded-webview-size-button-border-color, rgb(184, 184, 184));
-  --_button-bgcolor: var(--blockquote-base-embedded-webview-size-button-bgcolor, rgb(234, 234, 234));
-  --_button-bgcolor-hover: var(--blockquote-base-embedded-webview-size-button-bgcolor-hover, rgb(220, 220, 220));
-  --_button-bgcolor-selected-hover: var(--blockquote-base-embedded-webview-size-button-bgcolor-selected-hover, rgb(210, 210, 210));
+  --_button-border-color: var(
+    --blockquote-base-embedded-webview-size-button-border-color,
+    rgb(184, 184, 184)
+  );
+  --_button-bgcolor: var(
+    --blockquote-base-embedded-webview-size-button-bgcolor,
+    rgb(234, 234, 234)
+  );
+  --_button-bgcolor-hover: var(
+    --blockquote-base-embedded-webview-size-button-bgcolor-hover,
+    rgb(220, 220, 220)
+  );
+  --_button-bgcolor-selected-hover: var(
+    --blockquote-base-embedded-webview-size-button-bgcolor-selected-hover,
+    rgb(210, 210, 210)
+  );
 
   color: var(--_host-color);
   display: block;
@@ -76,7 +88,12 @@ button {
       left: 50%;
       top: 50%;
       transform: translate(-50%, -50%);
-      background-image: linear-gradient(90deg, rgba(0, 0, 0, 0), rgba(0, 0, 0, 1), rgba(0, 0, 0, 0));
+      background-image: linear-gradient(
+        90deg,
+        rgba(0, 0, 0, 0),
+        rgba(0, 0, 0, 1),
+        rgba(0, 0, 0, 0)
+      );
     }
   }
 }
