--- a/packages/base/blockquote-base-embedded-webview/src/styles/blockquote-base-embedded-webview.scss
+++ b/packages/base/blockquote-base-embedded-webview/src/styles/blockquote-base-embedded-webview.scss
@@ -4,7 +4,11 @@
   --_host-color: var(--blockquote-base-embedded-webview-color, rgb(32, 32, 32));
   --_main-bgcolor: var(--blockquote-base-embedded-webview-main-bgcolor, rgb(250, 250, 250));
   --_select-bgcolor: var(--blockquote-base-embedded-webview-select-bgcolor, rgb(222, 222, 222));
-  --_select-transition: var(--blockquote-base-embedded-webview-select-transition, border-bottom 196ms ease-out, var(--blockquote-base-embedded-webview-select-transition, border-bottom 196ms ease-out));
+  --_select-transition: var(
+    --blockquote-base-embedded-webview-select-transition,
+    border-bottom 196ms ease-out,
+    var(--blockquote-base-embedded-webview-select-transition, border-bottom 196ms ease-out)
+  );
   --blockquote-base-embedded-webview-resize-rect-width: 40rem; /* 40rem */
   --blockquote-base-embedded-webview-resize-rect-height: 22.5rem; /* 22.5rem */
 
