--- a/packages/components/blockquote-dialog/demo/labelledby.html
+++ b/packages/components/blockquote-dialog/demo/labelledby.html
@@ -10,6 +10,7 @@
       :root {
         font: normal medium/1.25 sans-serif;
       }
+
       body {
         margin: 0;
       }
@@ -26,6 +27,7 @@
         white-space: nowrap;
         border: 0;
       }
+
       :not(:defined) {
         visibility: hidden;
       }
@@ -35,7 +37,7 @@
       }
 
       form p {
-        margin: 1rem 0 0 0;
+        margin: 1rem 0 0;
       }
     </style>
   </head>
