--- a/packages/components/blockquote-dialog/demo/base.html
+++ b/packages/components/blockquote-dialog/demo/base.html
@@ -118,7 +118,7 @@
       const form = document.querySelector('form');
 
       openDialog.addEventListener('click', () => {
-        dialog.setAttribute('open', '');
+        dialog.open = true;
       });
 
       dialog.addEventListener('open', (ev) => {
