--- a/packages/base/blockquote-base-embedded-webview/src/styles/blockquote-base-embedded-webview-size.scss
+++ b/packages/base/blockquote-base-embedded-webview/src/styles/blockquote-base-embedded-webview-size.scss
@@ -88,12 +88,7 @@ button {
       left: 50%;
       top: 50%;
       transform: translate(-50%, -50%);
-      background-image: linear-gradient(
-        90deg,
-        rgba(0, 0, 0, 0),
-        rgba(0, 0, 0, 1),
-        rgba(0, 0, 0, 0)
-      );
+      background-image: linear-gradient(90deg, rgb(0, 0, 0, 0), rgb(0, 0, 0, 1), rgb(0, 0, 0, 0));
     }
   }
 }
