fix(blockquote-dialog): css logical properties

--- a/packages/components/blockquote-dialog/src/styles/blockqoute-dialog-animations.scss
+++ b/packages/components/blockquote-dialog/src/styles/blockqoute-dialog-animations.scss
@@ -1,26 +1,28 @@
-/* Closed state of the dialog */
 dialog {
   opacity: 0;
   transform: translateY(16%);
   transition:
     opacity 200ms ease-out,
-    transform 200ms ease-out,
-    overlay 200ms ease-out allow-discrete,
-    display 200ms ease-out allow-discrete;
-
-  /* Equivalent to
-  transition: all 200ms allow-discrete; */
+    transform 200ms ease-out;
 }
 
-/* Open state of the dialog */
+@supports (transition-behavior: allow-discrete) {
+  dialog {
+    transition:
+      opacity 200ms ease-out,
+      transform 200ms ease-out,
+      overlay 200ms ease-out allow-discrete,
+      display 200ms ease-out allow-discrete;
+  }
+}
+
+/* [open state] */
 dialog[open] {
   opacity: 1;
   transform: translateY(0);
 }
 
-/* Before-open state
- Needs to be after the previous dialog[open] rule to take effect,
-as the specificity is the same */
+/* Before - [open state] Needs to be after the previous dialog[open] rule to take effect, as the specificity is the same */
 @starting-style {
   dialog[open] {
     opacity: 0;
@@ -31,23 +33,40 @@ as the specificity is the same */
 /* Transition the :backdrop when the dialog modal is promoted to the top layer */
 dialog::backdrop {
   background-color: rgb(120 120 120 / 0%);
-  transition:
-    display 190ms ease-in allow-discrete,
-    overlay 190ms ease-in allow-discrete,
-    background-color 190ms;
+  transition: background-color 190ms ease-in;
+}
 
-  /* Equivalent to
-  transition: all 190ms allow-discrete; */
+@supports (transition-behavior: allow-discrete) {
+  dialog::backdrop {
+    transition:
+      display 190ms ease-in allow-discrete,
+      overlay 190ms ease-in allow-discrete,
+      background-color 190ms ease-in;
+  }
 }
 
 dialog[open]::backdrop {
-  background-color: rgb(120 120 120 / 25%);
+  background-color: rgb(120 120 120 / 20%);
 }
 
-/* This starting-style rule cannot be nested inside the above selector
-because the nesting selector cannot represent pseudo-elements. */
 @starting-style {
   dialog[open]::backdrop {
     background-color: rgb(120 120 120 / 0%);
+  }
+}
+
+@media (prefers-reduced-motion: reduce) {
+  dialog {
+    transition: none !important;
+    transform: none !important;
+  }
+
+  dialog[open] {
+    transform: none !important;
+  }
+
+  dialog::backdrop,
+  dialog[open]::backdrop {
+    transition: none !important;
   }
 }
