--- a/packages/components/blockquote-tabs/src/tabpanel/styles/blockquote-tabpanel.scss
+++ b/packages/components/blockquote-tabs/src/tabpanel/styles/blockquote-tabpanel.scss
@@ -1,7 +1,8 @@
 :host {
   display: block;
   box-sizing: border-box;
-  padding: 1rem;
+  padding-block: 1rem;
+  padding-inline: 1rem;
   color: var(--tabpanel, inherit);
 }
 
