--- a/packages/base/blockquote-base-embedded-webview/src/styles/blockquote-base-embedded-webview-size.scss
+++ b/packages/base/blockquote-base-embedded-webview/src/styles/blockquote-base-embedded-webview-size.scss
@@ -85,8 +85,8 @@ button {
       height: 1px;
       width: calc(100% + 2rem);
       position: absolute;
-      left: 50%;
-      top: 50%;
+      inset-inline-start: 50%;
+      inset-block-start: 50%;
       transform: translate(-50%, -50%);
       background-image: linear-gradient(90deg, rgb(0, 0, 0, 0), rgb(0, 0, 0, 1), rgb(0, 0, 0, 0));
     }
@@ -96,8 +96,8 @@ button {
 button {
   position: absolute;
   background-color: var(--_button-bgcolor);
-  border-left: 1px solid var(--_button-border-color);
-  border-right: 1px solid var(--_button-border-color);
+  border-inline-start: 1px solid var(--_button-border-color);
+  border-inline-end: 1px solid var(--_button-border-color);
 
   span {
     opacity: 0;
