fix(blockquote-base-embedded-webview): css logical properties

--- a/packages/base/blockquote-base-embedded-webview/src/styles/blockquote-base-embedded-webview-resize.scss
+++ b/packages/base/blockquote-base-embedded-webview/src/styles/blockquote-base-embedded-webview-resize.scss
@@ -37,7 +37,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  height: inherit;
+  block-size: inherit;
   padding: calc(var(--__resizer-factor) * 1) 0 calc(var(--__resizer-factor) * 2);
 }
 
@@ -55,12 +55,12 @@
 .rect {
   position: relative;
   align-self: center;
-  min-width: var(--_rect-min-width);
-  min-height: var(--_rect-min-height);
-  max-width: var(--_rect-max-width);
-  max-height: var(--_rect-max-height);
-  width: var(--_rect-width);
-  height: var(--_rect-height);
+  min-inline-size: var(--_rect-min-width);
+  min-block-size: var(--_rect-min-height);
+  max-inline-size: var(--_rect-max-width);
+  max-block-size: var(--_rect-max-height);
+  inline-size: var(--_rect-width);
+  block-size: var(--_rect-height);
   transform: translateZ(0);
 }
 
@@ -69,8 +69,8 @@
   display: block;
   position: absolute;
   background-color: var(--_resizer-bgcolor); // --color-background-elevation-2: rgb(222 225 230);
-  width: 100%;
-  height: 100%;
+  inline-size: 100%;
+  block-size: 100%;
 
   &::after {
     // resizeVertical
@@ -82,10 +82,10 @@
   }
 
   &-n {
-    height: calc(var(--__resizer-factor) / 4);
+    block-size: calc(var(--__resizer-factor) / 4);
     inset-block-start: calc(var(--__resizer-factor) / 4 * -1);
     inset-inline-start: calc(var(--__resizer-factor) * -1);
-    width: calc(100% + var(--__resizer-factor) * 2);
+    inline-size: calc(100% + var(--__resizer-factor) * 2);
     border-start-start-radius: calc(var(--__resizer-factor) / 10);
     border-start-end-radius: calc(var(--__resizer-factor) / 10);
 
@@ -132,8 +132,8 @@
 
   &-se,
   &-sw {
-    height: var(--__resizer-factor);
-    width: var(--__resizer-factor);
+    block-size: var(--__resizer-factor);
+    inline-size: var(--__resizer-factor);
 
     &::after {
       // resizeDiagonal
@@ -149,7 +149,7 @@
 
   &-s {
     cursor: ns-resize;
-    height: var(--__resizer-factor);
+    block-size: var(--__resizer-factor);
 
     &::after {
       // resizeHorizontal
@@ -167,7 +167,7 @@
   &-e,
   &-w {
     cursor: ew-resize;
-    width: var(--__resizer-factor);
+    inline-size: var(--__resizer-factor);
 
     &:hover {
       background-image: var(
