--- a/packages/base/blockquote-base-embedded-webview/src/styles/blockquote-base-embedded-webview-element.scss
+++ b/packages/base/blockquote-base-embedded-webview/src/styles/blockquote-base-embedded-webview-element.scss
@@ -2,8 +2,8 @@
 ::slotted([slot="embedded"]) {
   display: block;
   box-sizing: border-box;
-  width: 100%;
-  height: 100%;
+  inline-size: 100%;
+  block-size: 100%;
   margin: 0;
   border: 0;
 }
