--- a/packages/components/blockquote-tabs/demo/autofocus.html
+++ b/packages/components/blockquote-tabs/demo/autofocus.html
@@ -17,8 +17,8 @@
 
       [data-embedded] .sr-only {
         position: absolute;
-        width: 1px;
-        height: 1px;
+        inline-size: 1px;
+        block-size: 1px;
         padding: 0;
         margin: -1px;
         overflow: hidden;
@@ -35,7 +35,7 @@
   <body>
     <main>
       <h1 class="sr-only">blockquote-tabs</h1>
-      <blockquote-tabs selected="5" autofocus label="List of tabs">
+      <blockquote-tabs selected="5" autofocus="" label="List of tabs">
         <blockquote-tab id="tab-1">Tab 1</blockquote-tab>
         <blockquote-tab id="tab-2">Tab 2</blockquote-tab>
         <blockquote-tab id="tab-3">Tab 3</blockquote-tab>
