--- a/packages/foundations/blockquote-foundations-sass/_mixins.scss
+++ b/packages/foundations/blockquote-foundations-sass/_mixins.scss
@@ -27,8 +27,8 @@ $base-font-size: 16px;
 // ----------------*/
 @mixin visuallyhidden {
   position: absolute;
-  width: 1px;
-  height: 1px;
+  inline-size: 1px;
+  block-size: 1px;
   padding: 0;
   margin: -1px;
   overflow: hidden;
