--- a/packages/base/blockquote-base-embedded-webview/src/styles/blockquote-base-embedded-webview-resize.scss
+++ b/packages/base/blockquote-base-embedded-webview/src/styles/blockquote-base-embedded-webview-resize.scss
@@ -38,7 +38,7 @@
   flex-direction: column;
   align-items: center;
   block-size: inherit;
-  padding: calc(var(--__resizer-factor) * 1) 0 calc(var(--__resizer-factor) * 2);
+  padding-block: calc(var(--__resizer-factor) * 1) calc(var(--__resizer-factor) * 2);
 }
 
 :host([hidden]),
