--- a/packages/base/blockquote-base-embedded-webview/src/styles/blockquote-base-embedded-webview.scss
+++ b/packages/base/blockquote-base-embedded-webview/src/styles/blockquote-base-embedded-webview.scss
@@ -51,7 +51,8 @@ header > div {
   position: relative;
   max-inline-size: 80rem;
   margin: 0 auto;
-  padding: 0.5rem 1.5rem;
+  padding-block: 0.5rem;
+  padding-inline: 1.5rem;
 }
 
 [role="heading"] {
@@ -97,7 +98,8 @@ header > div {
     background-color: transparent;
     border: none;
     border-block-end: 0.125rem solid var(--_select-bgcolor);
-    padding: 0.25em 1em 0.25em 0;
+    padding-block: 0.25em;
+    padding-inline: 0 1em;
     margin: 0;
     inline-size: 100%;
     cursor: pointer;
@@ -118,7 +120,8 @@ header > div {
 }
 
 .description {
-  margin: 0.5rem 0 1rem;
+  margin-inline: 0;
+  margin-block: 0.5rem 1rem;
   font-size: 0.875rem;
 }
 
@@ -138,5 +141,6 @@ header > div {
 }
 
 blockquote-base-embedded-webview-resize {
+  overflow-x: hidden;
   overflow-inline: hidden;
 }
