--- a/packages/components/blockquote-dialog/demo/labelledby.html
+++ b/packages/components/blockquote-dialog/demo/labelledby.html
@@ -37,7 +37,8 @@
       }
 
       form p {
-        margin: 1rem 0 0;
+        margin: 0;
+        margin-block-start: 1rem;
       }
     </style>
   </head>
