--- a/packages/components/blockquote-tabs/demo/base.html
+++ b/packages/components/blockquote-tabs/demo/base.html
@@ -3,7 +3,9 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="favicon.svg" sizes="any" type="image/svg+xml" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, interactive-widget=resizes-content.0" />
     <meta name="description" content="Demo Base - blockquote-tabs" />
     <title>Base - blockquote-tabs</title>
     <style>
